lb-alb-targetip/alb-ingress-targettype-ip.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb-targetip
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: targetip-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: surea-ingress-class
  rules:
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: app3-nginx-clusterip-service
            port: 
              number: 80
      - path: /app1
        pathType: Prefix
        backend: 
          service: 
            name: app1-nginx-clusterip-service
            port: 
              number: 80
      - path: /app2
        pathType: Prefix
        backend: 
          service: 
            name: app2-nginx-clusterip-service
            port: 
              number: 80
